--- a/Dashboard/Areas/SeasonEntity/Views/Season/Details.cshtml
+++ b/Dashboard/Areas/SeasonEntity/Views/Season/Details.cshtml
@@ -16,10 +16,20 @@
 
                     <dt class="col-sm-4 fw-bolder mb-1">@Html.DisplayNameFor(model => model.Name):</dt>
                     <dd class="col-sm-8 mb-1">@Model.Name</dd>
+                </dl>
+            </div>
+            <div class="col-xl-6 col-12">
+                <dl class="row mb-0">
+                    <dt class="col-sm-4 fw-bolder mb-1">@Html.DisplayNameFor(model => model.IsCurrent):</dt>
+                    <dd class="col-sm-8 mb-1">@Model.IsCurrent</dd>
 
-                  
+                </dl>
+            </div>
+            <div class="col-xl-6 col-12">
+                <dl class="row mb-0">
 
-
+                    <dt class="col-sm-4 fw-bolder mb-1">@Html.DisplayNameFor(model => model._365_CompetitionsId):</dt>
+                    <dd class="col-sm-8 mb-1">@Model._365_CompetitionsId</dd>
                 </dl>
             </div>
             <div class="col-xl-6 col-12">
