--- a/Dashboard/Areas/SeasonEntity/Views/Season/Index.cshtml
+++ b/Dashboard/Areas/SeasonEntity/Views/Season/Index.cshtml
@@ -16,93 +16,94 @@
 
 <!-- BEGIN: Content-->
 
-    <div class="app-content content ">
-        <div class="content-overlay"></div>
-        <div class="header-navbar-shadow"></div>
-        <div class="content-wrapper container-xxl p-0">
-            <div class="content-header row">
-                <div class="content-header-left col-md-9 col-12 mb-2">
-                    <div class="row breadcrumbs-top">
-                        <div class="col-6">
-                            <h2 class="content-header-title float-start mb-0">@ViewData["Title"]</h2>
-                            <div class="breadcrumb-wrapper">
-                                <ol class="breadcrumb">
-                                    <li class="breadcrumb-item">
-                                        <a href="#">@Localizer.Get("Dashboard")</a>
-                                    </li>
-                                    <li class="breadcrumb-item active">
-                                        @ViewData["Title"]
-                                    </li>
+<div class="app-content content ">
+    <div class="content-overlay"></div>
+    <div class="header-navbar-shadow"></div>
+    <div class="content-wrapper container-xxl p-0">
+        <div class="content-header row">
+            <div class="content-header-left col-md-9 col-12 mb-2">
+                <div class="row breadcrumbs-top">
+                    <div class="col-6">
+                        <h2 class="content-header-title float-start mb-0">@ViewData["Title"]</h2>
+                        <div class="breadcrumb-wrapper">
+                            <ol class="breadcrumb">
+                                <li class="breadcrumb-item">
+                                    <a href="#">@Localizer.Get("Dashboard")</a>
+                                </li>
+                                <li class="breadcrumb-item active">
+                                    @ViewData["Title"]
+                                </li>
 
-                                </ol>
+                            </ol>
 
 
-                            </div>
                         </div>
-
-
-
                     </div>
+
+
+
                 </div>
             </div>
+        </div>
 
-            <div class="content-body">
-                <section id="ajax-datatable">
-                    <div class="row">
-                        <div class="col-12">
-                            <div class="card">
-                                <div class="card-header border-bottom">
-                                    <h4 class="card-title"> @ViewData["Title"]</h4>
+        <div class="content-body">
+            <section id="ajax-datatable">
+                <div class="row">
+                    <div class="col-12">
+                        <div class="card">
+                            <div class="card-header border-bottom">
+                                <h4 class="card-title"> @ViewData["Title"]</h4>
 
-                                </div>
+                            </div>
 
-                                <div class="card-datatable">
-                                    <table class="datatables datatables-ajax table table-responsive table">
-                                        <thead>
-                                            <tr>
-                                                <th>
-                                                    @Html.DisplayNameFor(model => row.Id)
+                            <div class="card-datatable">
+                                <table class="datatables datatables-ajax table table-responsive table">
+                                    <thead>
+                                        <tr>
+                                            <th>
+                                                @Html.DisplayNameFor(model => row.Id)
 
-                                                    <a id="profile" asp-action="Profile">
+                                                <a id="profile" asp-action="Profile">
+                                                </a>
+
+                                                @if (accessLevel.CreateAccess)
+                                                {
+                                                    <a id="create" asp-action="CreateOrEdit">
                                                     </a>
+                                                }
 
-                                                    @if (accessLevel.CreateAccess)
-                                                    {
-                                                        <a id="create" asp-action="CreateOrEdit">
-                                                        </a>
-                                                    }
+                                                @if (accessLevel.EditAccess)
+                                                {
+                                                    <a id="edit" asp-action="CreateOrEdit">
+                                                    </a>
+                                                }
+                                                @if (accessLevel.DeleteAccess)
+                                                {
+                                                    <a id="delete" asp-action="Delete">
+                                                    </a>
+                                                }
 
-                                                    @if (accessLevel.EditAccess)
-                                                    {
-                                                        <a id="edit" asp-action="CreateOrEdit">
-                                                        </a>
-                                                    }
-                                                    @if (accessLevel.DeleteAccess)
-                                                    {
-                                                        <a id="delete" asp-action="Delete">
-                                                        </a>
-                                                    }
-
-                                                </th>
-                                                <th>@Html.DisplayNameFor(model => row.Name)</th>
-                                                <th>@Html.DisplayNameFor(model => row.IsCurrent)</th>
-                                                <th>@Html.DisplayNameFor(model => row.CreatedAt)</th>
-                                                <th>
-                                                    @Html.DisplayNameFor(model => row.Id)
-                                                </th>
-                                            </tr>
-                                        </thead>
-                                    </table>
-                                </div>
+                                            </th>
+                                            <th>@Html.DisplayNameFor(model => row.Name)</th>
+                                            <th>@Html.DisplayNameFor(model => row._365_CompetitionsId)</th>
+                                            <th>@Html.DisplayNameFor(model => row._365_SeasonId)</th>
+                                            <th>@Html.DisplayNameFor(model => row.IsCurrent)</th>
+                                            <th>
+                                                @Html.DisplayNameFor(model => row.Id)
+                                            </th>
+                                        </tr>
+                                    </thead>
+                                </table>
                             </div>
                         </div>
                     </div>
-                </section>
-
-            </div>
+                </div>
+            </section>
 
         </div>
+
     </div>
+</div>
 
 
 <!-- END: Content-->
@@ -156,8 +157,10 @@
 
                             }
                         },
+                        { data: "_365_CompetitionsId" },
+                        { data: "_365_SeasonId" },
                         {
-                            data: "isCurrent", 
+                            data: "isCurrent",
                             render: function(data) {
                               if (data) {
                                  return '@Localizer.Get("Yes")'
@@ -166,7 +169,6 @@
                               }
                             }
                         },
-                        { data: "createdAt" },
                         { data: "id" },
                     ]
                 });
