--- a/Dashboard/Areas/TeamEntity/Views/Player/Filter.cshtml
+++ b/Dashboard/Areas/TeamEntity/Views/Player/Filter.cshtml
@@ -13,29 +13,36 @@
 
     <div class="card-body mt-2">
         <form asp-action="LoadTable" class="filter">
-
             <div class="row g-1 mb-md-1">
+
+                <div class="col-md-6 col-12">
+                    <div class="mb-1">
+                        <label asp-for="Fk_Season" class="form-label"></label>
+                        <select class="form-control select2" asp-for="Fk_Season" asp-items="@(new SelectList(ViewData["Season"] as Dictionary<string, string>, "Key", "Value"))">
+                            <option value="0">@Localizer.Get("All")</option>
+                        </select>
+                        <span asp-validation-for="Fk_Season" class="text-danger"></span>
+                    </div>
+                </div>
+                
                 <div class="col-md-6 col-12">
                     <div class="mb-1">
                         <label asp-for="Fk_Team" class="form-label"></label>
-                        <select asp-for="Fk_Team" class="select2 form-select" asp-items="@(new MultiSelectList(ViewData["Team"] as Dictionary<string,string>,"Key","Value"))">
+                        <select asp-for="Fk_Team" class="select2 form-select" asp-items="@(new MultiSelectList(ViewData["Team"] as Dictionary<string, string>, "Key", "Value"))">
                             <option value="0">@Localizer.Get("All")</option>
                         </select>
                     </div>
                 </div>
+
                 <div class="col-md-6 col-12">
                     <div class="mb-1">
                         <label asp-for="Fk_PlayerPosition" class="form-label"></label>
-                        <select asp-for="Fk_PlayerPosition" class="select2 form-select" asp-items="@(new MultiSelectList(ViewData["PlayerPosition"] as Dictionary<string,string>,"Key","Value"))">
+                        <select asp-for="Fk_PlayerPosition" class="select2 form-select" asp-items="@(new MultiSelectList(ViewData["PlayerPosition"] as Dictionary<string, string>, "Key", "Value"))">
                             <option value="0">@Localizer.Get("All")</option>
                         </select>
                     </div>
                 </div>
-
-            </div>
-
-            <div class="row g-1 mb-md-1">
-
+                
                 <div class="col-md-6">
                     <label asp-for="CreatedAtFrom" class="form-label"></label>
                     <div class="mb-0">
