--- a/Dashboard/Areas/TeamEntity/Views/Player/Index.cshtml
+++ b/Dashboard/Areas/TeamEntity/Views/Player/Index.cshtml
@@ -199,6 +199,7 @@ else
 }
 <!-- END: Content-->
 @section scripts{
+    <script src="~/apis/site.js"></script>
     <script src="~/apis/charts.js"></script>
     <script>
         function LoadTable() {
@@ -213,11 +214,13 @@ else
                         dataType: "json",
                         data: function (data) {
                             data.Fk_Team = $("#Fk_Team").length > 0 ? $("#Fk_Team").val() : @Model.Fk_Team;
+                            data.Fk_Season = $("#Fk_Season").length > 0 ? $("#Fk_Season").val() : @Model.Fk_Season;
                             data.Fk_GameWeak = $("#Fk_GameWeak").length > 0 ? $("#Fk_GameWeak").val() : @Model.Fk_GameWeak;
                             data.Fk_PlayerPosition = $("#Fk_PlayerPosition").length > 0 ? $("#Fk_PlayerPosition").val() : @Model.Fk_PlayerPosition;
                             data.CreatedAtFrom = $("#CreatedAtFrom").length > 0 ? $("#CreatedAtFrom").val() : '@Model.CreatedAtFrom';
                             data.CreatedAtTo = $("#CreatedAtTo").length > 0 ? $("#CreatedAtTo").val() : '@Model.CreatedAtTo';
 
+                            
                             return JSON.stringify(data);
                         }
                     },
@@ -376,6 +379,12 @@ else
         
         $(document).on("click", ".selectAllPlayers", function() {
           $('input:checkbox').prop('checked', this.checked);
-        })
+        });
+        
+        $(document).on("change", "#Fk_Season", function() {
+          let fk_Season = $(this).val();
+            
+          getTeams($("#Fk_Team"), fk_Season, false);
+        });
     </script>
 }
