--- a/Dashboard/Areas/TeamEntity/Views/Team/Index.cshtml
+++ b/Dashboard/Areas/TeamEntity/Views/Team/Index.cshtml
@@ -88,6 +88,7 @@
                                             </th>
                                             <th>@Html.DisplayNameFor(model => row.Name)</th>
                                             <th>@Html.DisplayNameFor(model => row.ShortName)</th>
+                                            <th>@Html.DisplayNameFor(model => row.Season)</th>
                                             <th>@Html.DisplayNameFor(model => row._365_TeamId)</th>
                                             <th>@Html.DisplayNameFor(model => row.IsActive)</th>
                                             <th>@Html.DisplayNameFor(model => row.CreatedAt)</th>
@@ -125,6 +126,7 @@
                         data: function(data) {
                              data.CreatedAtFrom = $("#CreatedAtFrom").length > 0 ? $("#CreatedAtFrom").val() : '@Model.CreatedAtFrom';
                             data.CreatedAtTo = $("#CreatedAtTo").length > 0 ? $("#CreatedAtTo").val() : '@Model.CreatedAtTo';
+                            data.Fk_Season = $("#Fk_Season").length > 0 ? $("#Fk_Season").val() : @Model.Fk_Season;
 
                             return JSON.stringify(data);
                         }
@@ -164,6 +166,7 @@
                             }
                         },
                         { data: "shortName" },
+                        { data: "season.name" },
                         { data: "_365_TeamId" },
                         { data: "isActive", render: function(data) {
                           if (data) {
