--- a/Dashboard/Areas/PrivateLeagueEntity/Views/PrivateLeague/Index.cshtml
+++ b/Dashboard/Areas/PrivateLeagueEntity/Views/PrivateLeague/Index.cshtml
@@ -56,8 +56,18 @@
                         <div class="card">
                             <div class="card-header border-bottom">
                                 <h4 class="card-title"> @ViewData["Title"]</h4>
-
                             </div>
+                            
+                            <p class="m-2 demo-inline-spacing">
+                                <a class="btn btn-primary me-1" data-bs-toggle="collapse" href="#AdvancedFilter" role="button" aria-expanded="false" aria-controls="AdvancedFilter">
+                                    <i data-feather='filter'></i>
+                                    @Localizer.Get("Advanced Search")
+                                </a>
+
+                            </p>
+                            @{
+                                await Html.RenderPartialAsync("../PrivateLeague/Filter", Model, ViewData);
+                            }
 
                             <div class="card-datatable">
                                 <table class="datatables datatables-ajax table table-responsive table">
@@ -117,6 +127,7 @@
 
 <!-- END: Content-->
 @section scripts{
+    <script src="~/apis/site.js"></script>
     <script src="~/apis/charts.js"></script>
     <script>
 
@@ -181,7 +192,6 @@
             }
         };
 
-
         $(document).ready(function() {
             LoadTable();
 
@@ -212,5 +222,11 @@
             });
         });
         // end update_private_league_ranking
+        
+        $(document).on("change", "#Fk_Season", function() {
+          let fk_Season = $(this).val();
+            
+          getGameWeak($("#Fk_GameWeak"), fk_Season, false);
+        });
     </script>
 }
