--- a/Dashboard/Areas/TeamEntity/Views/Player/Filter.cshtml
+++ b/Dashboard/Areas/TeamEntity/Views/Player/Filter.cshtml
@@ -43,6 +43,18 @@
                     </div>
                 </div>
                 
+                <div class="col-md-6 col-12">
+                    <div class="mb-1">
+                        <label asp-for="IsActive" class="form-label"></label>
+                        <select class="form-control select2" asp-for="IsActive">
+                            <option value="">@Localizer.Get("All")</option>
+                            <option value="true">@Localizer.Get("Yes")</option>
+                            <option value="false">@Localizer.Get("No")</option>
+                        </select>
+                        <span asp-validation-for="IsActive" class="text-danger"></span>
+                    </div>
+                </div>
+
                 <div class="col-md-6">
                     <label asp-for="CreatedAtFrom" class="form-label"></label>
                     <div class="mb-0">
