--- a/Dashboard/Areas/AccountEntity/Views/Account/CreateOrEdit.cshtml
+++ b/Dashboard/Areas/AccountEntity/Views/Account/CreateOrEdit.cshtml
@@ -133,7 +133,7 @@
                                             </div>
                                         </div>
                                        
-                                        <div class="col-md-6 col-12">
+                                        <div class="col-md-4 col-12">
                                             <div class="mb-1">
                                                 <label asp-for="Account.Fk_FavouriteTeam" class="form-label"></label>
                                                 <select asp-for="Account.Fk_FavouriteTeam" class="select2 form-select" asp-items="@(new SelectList(ViewData["Teams"] as Dictionary<string,string>,"Key","Value"))">
@@ -142,7 +142,16 @@
                                             </div>
                                         </div>
                                         
-                                        <div class="col-md-6 col-12">
+                                        <div class="col-md-4 col-12">
+                                            <div class="mb-1">
+                                                <label class="form-label">@Localizer.Get("FavouriteSeason")</label>
+                                                <select asp-for="Account.Fk_Season" class="select2 form-select" asp-items="@(new SelectList(ViewData["Season"] as Dictionary<string,string>,"Key","Value"))">
+                                                </select>
+                                                <span asp-validation-for="Account.Fk_Season" class="text-danger"></span>
+                                            </div>
+                                        </div>
+
+                                        <div class="col-md-4 col-12">
                                             <div class="mb-1">
                                                 <label asp-for="Account.PhoneNumberTwo" class="form-label"></label>
                                                 <input asp-for="Account.PhoneNumberTwo" class="form-control" placeholder="@Localizer.Get("Enter") @(Localizer.Get("PhoneNumberTwo"))" />
