--- a/Dashboard/Areas/AccountEntity/Views/Account/Filter.cshtml
+++ b/Dashboard/Areas/AccountEntity/Views/Account/Filter.cshtml
@@ -90,6 +90,15 @@
                         </select>
                     </div>
                 </div>
+                
+                <div class="col-md-6 col-12">
+                    <div class="mb-1">
+                        <label asp-for="Fk_Season" class="form-label"></label>
+                        <select asp-for="Fk_Season" class="select2 form-select" asp-items="@(new MultiSelectList(ViewData["Season"] as Dictionary<string,string>,"Key","Value"))">
+                            <option value="0">@Localizer.Get("All")</option>
+                        </select>
+                    </div>
+                </div>
             </div>
             <hr />
             <br />
