--- a/Dashboard/Areas/AccountEntity/Views/Account/Index.cshtml
+++ b/Dashboard/Areas/AccountEntity/Views/Account/Index.cshtml
@@ -89,6 +89,7 @@
                                             <th>@Html.DisplayNameFor(model => row.FullName)</th>
                                             <th>@Html.DisplayNameFor(model => row.Nationality)</th>
                                             <th>@Html.DisplayNameFor(model => row.Country)</th>
+                                            <th>@Localizer.Get("FavouriteSeason")</th>
                                             <th>@Html.DisplayNameFor(model => row.PhoneNumber)</th>
                                             <th>@Html.DisplayNameFor(model => row.EmailAddress)</th>
                                             <th>@Html.DisplayNameFor(model => row.CreatedAt)</th>
@@ -128,6 +129,7 @@
                           data.Fk_Country = $("#Fk_Country").length >  0 ?$("#Fk_Country").val() : @Model.Fk_Country;
                             data.Fk_Nationality = $("#Fk_Nationality").length > 0 ? $("#Fk_Nationality").val() : @Model.Fk_Nationality;
                             data.Fk_Subscription = $("#Fk_Subscription").length > 0 ? $("#Fk_Subscription").val() : @Model.Fk_Subscription;
+                            data.Fk_Season = $("#Fk_Season").length > 0 ? $("#Fk_Season").val() : @Model.Fk_Season;
                             data.Fk_FavouriteTeam = $("#Fk_Country").length > 0 ? $("#Fk_FavouriteTeam").val() : @Model.Fk_FavouriteTeam;
                             data.AccountUserName = $("#AccountUserName").length > 0 ? $("#AccountUserName").val() : '@Model.AccountUserName';
                             data.AccountFullName = $("#AccountFullName").length > 0 ? $("#AccountFullName").val() : '@Model.AccountFullName';
@@ -173,6 +175,7 @@
                         },
                         { data: "nationality.name",  orderable: false },
                         { data: "country.name",  orderable: false },
+                        { data: "season.name",  orderable: false },
 
                         { data: "phoneNumber" },
                         { data: "emailAddress" },
