--- a/Dashboard/Areas/AccountTeamEntity/Views/AccountTeam/Filter.cshtml
+++ b/Dashboard/Areas/AccountTeamEntity/Views/AccountTeam/Filter.cshtml
@@ -37,7 +37,15 @@
                         </select>
                     </div>
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-6 col-12">
+                    <div class="mb-1">
+                        <label asp-for="Fk_FavouriteTeam" class="form-label"></label>
+                        <select asp-for="Fk_FavouriteTeam" class="select2 form-select" asp-items="@(new MultiSelectList(ViewData["Team"] as Dictionary<string, string>, "Key", "Value"))">
+                            <option value="0">@Localizer.Get("All")</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="col-md-12">
                     <label asp-for="CreatedAtFrom" class="form-label"></label>
                     <div class="mb-0">
                         <input type="text" class="form-control dt-date flatpickr-range dt-input flatpickr-input active" data-column="1" placeholder="@Localizer.Get("From Date To Date")" data-column-index="0" name="dt_date" readonly="readonly">
